# mimxrt1010-xinput

./: CMakeLists.txt  LICENSE  README.md  config.cmake  flags.cmake  pyocd.yaml  toolchain-gcc.cmake
include/: board.h  usb_device_config.h  usb_device_descriptor.h  usb_device_xinput.h  xinput.h
src/: usb_device_class.c  usb_device_descriptor.c  usb_device_xinput.c  xinput.c
